--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/integrations": "^9.2.0",
     "axios": "^0.27.2",
     "element-plus": "^2.2.17",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
