--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-plus": "^2.2.17",
     "universal-cookie": "^4.0.4",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
